--- a/css/home.css
+++ b/css/home.css
@@ -1,280 +1,329 @@
 /* Import Google font - Poppins */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
+
 :root {
-  --white-color: #fff;
-  --blue-color: #4070f4;
-  --grey-color: #707070;
-  --grey-color-light: #aaa;
+    --white-color: #fff;
+    --blue-color: #4070f4;
+    --grey-color: #707070;
+    --grey-color-light: #aaa;
 }
+
 body {
-  background-color: #e7f2fd;
-  transition: all 0.5s ease;
+    background-color: #e7f2fd;
+    transition: all 0.5s ease;
 }
-:root{
-    --navyblue:#001F3F;
-    --midnightblue:#191970;
-    --darkslateblue:#483D8B;
-    --darkblue:#00008B;
+
+:root {
+    --navyblue: #001F3F;
+    --midnightblue: #191970;
+    --darkslateblue: #483D8B;
+    --darkblue: #00008B;
 }
+
 body.dark {
-  background-color: var(--darkslateblue);
+    background-color: var(--darkslateblue);
 }
+
 body.dark {
-  --white-color:#001F3F;
-  --blue-color: #fff;
-  --grey-color: #f2f2f2;
-  --grey-color-light: #aaa;
+    --white-color: #001F3F;
+    --blue-color: #fff;
+    --grey-color: #f2f2f2;
+    --grey-color-light: #aaa;
 }
 
 /* navbar */
 .navbar {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  left: 0;
-  background-color: var(--white-color);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px 30px;
-  z-index: 1000;
-  box-shadow: 0 0 2px var(--grey-color-light);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0;
+    background-color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
+    z-index: 1000;
+    box-shadow: 0 0 2px var(--grey-color-light);
 }
+
 .logo_item {
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
-  font-size: 22px;
-  font-weight: 500;
-  color: var(--blue-color);
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    font-size: 22px;
+    font-weight: 500;
+    color: var(--blue-color);
 }
+
 .navbar img {
-  width: 35px;
-  height: 35px;
-  object-fit: cover;
-  border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    border-radius: 50%;
 }
+
 .search_bar {
-  height: 47px;
-  max-width: 430px;
-  width: 100%;
+    height: 47px;
+    max-width: 430px;
+    width: 100%;
 }
+
 .search_bar input {
-  height: 100%;
-  width: 100%;
-  border-radius: 25px;
-  font-size: 18px;
-  outline: none;
-  background-color: var(--white-color);
-  color: var(--grey-color);
-  border: 1px solid var(--grey-color-light);
-  padding: 0 20px;
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    font-size: 18px;
+    outline: none;
+    background-color: var(--white-color);
+    color: var(--grey-color);
+    border: 1px solid var(--grey-color-light);
+    padding: 0 20px;
 }
+
 .navbar_content {
-  display: flex;
-  align-items: center;
-  column-gap: 25px;
+    display: flex;
+    align-items: center;
+    column-gap: 25px;
 }
+
 .navbar_content i {
-  cursor: pointer;
-  font-size: 20px;
-  color: var(--grey-color);
+    cursor: pointer;
+    font-size: 20px;
+    color: var(--grey-color);
 }
 
 /* sidebar */
 .sidebar {
-  background-color: var(--white-color);
-  width: 260px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  padding: 80px 20px;
-  z-index: 100;
-  overflow-y: scroll;
-  box-shadow: 0 0 1px var(--grey-color-light);
-  transition: all 0.5s ease;
+    background-color: var(--white-color);
+    width: 260px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 80px 20px;
+    z-index: 100;
+    overflow-y: scroll;
+    box-shadow: 0 0 1px var(--grey-color-light);
+    transition: all 0.5s ease;
 }
+
 .sidebar.close {
-  padding: 60px 0;
-  width: 80px;
+    padding: 60px 0;
+    width: 80px;
 }
+
 .sidebar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
+
 .menu_content {
-  position: relative;
+    position: relative;
 }
+
 .menu_title {
-  margin: 15px 0;
-  padding: 0 20px;
-  font-size: 18px;
+    margin: 15px 0;
+    padding: 0 20px;
+    font-size: 18px;
 }
+
 .sidebar.close .menu_title {
-  padding: 6px 30px;
+    padding: 6px 30px;
 }
+
 .menu_title::before {
-  color: var(--grey-color);
-  white-space: nowrap;
+    color: var(--grey-color);
+    white-space: nowrap;
 }
+
 .menu_dahsboard::before {
-  content: "Dashboard";
+    content: "Dashboard";
 }
+
 .menu_editor::before {
-  content: "Editor";
+    content: "Editor";
 }
+
 .menu_setting::before {
-  content: "Setting";
+    content: "Setting";
 }
+
 .sidebar.close .menu_title::before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 18px;
-  border-radius: 12px;
-  background: var(--grey-color-light);
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 18px;
+    border-radius: 12px;
+    background: var(--grey-color-light);
 }
+
 .menu_items {
-  padding: 0;
-  list-style: none;
+    padding: 0;
+    list-style: none;
 }
+
 .navlink_icon {
-  position: relative;
-  font-size: 22px;
-  min-width: 50px;
-  line-height: 40px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 6px;
+    position: relative;
+    font-size: 22px;
+    min-width: 50px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 6px;
 }
+
 .navlink_icon::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: calc(100% + 100px);
-  left: -20px;
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: calc(100% + 100px);
+    left: -20px;
 }
+
 .navlink_icon:hover {
-  background: var(--blue-color);
+    background: var(--blue-color);
 }
+
 .sidebar .nav_link {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 4px 15px;
-  border-radius: 8px;
-  text-decoration: none;
-  color: var(--grey-color);
-  white-space: nowrap;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 4px 15px;
+    border-radius: 8px;
+    text-decoration: none;
+    color: var(--grey-color);
+    white-space: nowrap;
 }
+
 .sidebar.close .navlink {
-  display: none;
+    display: none;
 }
+
 .nav_link:hover {
-  color: var(--white-color);
-  background: var(--blue-color);
+    color: var(--white-color);
+    background: var(--blue-color);
 }
+
 .sidebar.close .nav_link:hover {
-  background: var(--white-color);
+    background: var(--white-color);
 }
+
 .submenu_item {
-  cursor: pointer;
+    cursor: pointer;
 }
+
 .submenu {
-  display: none;
+    display: none;
 }
+
 .submenu_item .arrow-left {
-  position: absolute;
-  right: 10px;
-  display: inline-block;
-  margin-right: auto;
+    position: absolute;
+    right: 10px;
+    display: inline-block;
+    margin-right: auto;
 }
+
 .sidebar.close .submenu {
-  display: none;
+    display: none;
 }
-.show_submenu ~ .submenu {
-  display: block;
+
+.show_submenu~.submenu {
+    display: block;
 }
+
 .show_submenu .arrow-left {
-  transform: rotate(90deg);
+    transform: rotate(90deg);
 }
+
 .submenu .sublink {
-  padding: 15px 15px 15px 52px;
+    padding: 15px 15px 15px 52px;
 }
+
 .bottom_content {
-  position: fixed;
-  bottom: 60px;
-  left: 0;
-  width: 260px;
-  cursor: pointer;
-  transition: all 0.5s ease;
+    position: fixed;
+    bottom: 60px;
+    left: 0;
+    width: 260px;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
+
 .bottom {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  left: 0;
-  justify-content: space-around;
-  padding: 18px 0;
-  text-align: center;
-  width: 100%;
-  color: var(--grey-color);
-  border-top: 1px solid var(--grey-color-light);
-  background-color: var(--white-color);
+    position: absolute;
+    display: flex;
+    align-items: center;
+    left: 0;
+    justify-content: space-around;
+    padding: 18px 0;
+    text-align: center;
+    width: 100%;
+    color: var(--grey-color);
+    border-top: 1px solid var(--grey-color-light);
+    background-color: var(--white-color);
 }
+
 .bottom i {
-  font-size: 20px;
+    font-size: 20px;
 }
+
 .bottom span {
-  font-size: 18px;
+    font-size: 18px;
 }
+
 .sidebar.close .bottom_content {
-  width: 50px;
-  left: 15px;
+    width: 50px;
+    left: 15px;
 }
+
 .sidebar.close .bottom span {
-  display: none;
+    display: none;
 }
+
 .sidebar.hoverable .collapse_sidebar {
-  display: none;
+    display: none;
 }
 
 #sidebarOpen {
-  display: none;
-}
-@media screen and (max-width: 768px) {
-  #sidebarOpen {
-    font-size: 25px;
-    display: block;
-    margin-right: 10px;
-    cursor: pointer;
-    color: var(--grey-color);
-  }
-  .sidebar.close {
-    left: -100%;
-  }
-  .search_bar {
     display: none;
-  }
-  .sidebar.close .bottom_content {
-    left: -100%;
-  }
+}
+
+@media screen and (max-width: 768px) {
+    #sidebarOpen {
+        font-size: 25px;
+        display: block;
+        margin-right: 10px;
+        cursor: pointer;
+        color: var(--grey-color);
+    }
+
+    .sidebar.close {
+        left: -100%;
+    }
+
+    .search_bar {
+        display: none;
+    }
+
+    .sidebar.close .bottom_content {
+        left: -100%;
+    }
 }
 
 
 /* code for the main content */
-.addbtn{
+.addbtn {
     position: fixed;
     bottom: 20px;
     right: 30px;
 }
-.addbtn button{
+
+.addbtn button {
     padding: 10px;
     color: white;
     border-radius: 5px;
@@ -289,6 +338,7 @@ body.dark {
     outline: none;
     cursor: pointer;
 }
+
 /* snack bar code */
 #snackbar {
     visibility: hidden;
@@ -304,39 +354,70 @@ body.dark {
     left: 50%;
     bottom: 30px;
     font-size: 17px;
-  }
-  
-  #snackbar.show {
+}
+
+#snackbar.show {
     visibility: visible;
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  }
-  
-  @-webkit-keyframes fadein {
-    from {bottom: 0; opacity: 0;} 
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @keyframes fadein {
-    from {bottom: 0; opacity: 0;}
-    to {bottom: 30px; opacity: 1;}
-  }
-  
-  @-webkit-keyframes fadeout {
-    from {bottom: 30px; opacity: 1;} 
-    to {bottom: 0; opacity: 0;}
-  }
-  
-  @keyframes fadeout {
-    from {bottom: 30px; opacity: 1;}
-    to {bottom: 0; opacity: 0;}
-  }
-main{
-    padding-left: 9%;
-    padding-top: 15%;
+}
+
+@-webkit-keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
+}
+
+@keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
+
+main {
+    padding-left: 3%;
+    padding-top: 20%;
+    padding-right: 2%;
 
 }
-.welcome-txt h1{
+
+.welcome-txt h1 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -344,3 +425,90 @@ main{
     color: black;
 }
 
+/* open modal code */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.modal-content .form {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.modal-content .form input {
+    padding: 10px;
+
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#taskList {
+    padding: 5px;
+}
+
+.list #taskList li {
+    cursor: pointer;
+    /* position: relative; */
+    padding: 20px;
+    height: 100px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    list-style-type: none;
+    background: white;
+    font-size: 18px;
+    transition: 0.2s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#taskList .deleteBtn{
+    background: none;
+    border: none;
+    font-size: 25px;
+}
+#taskList .deleteBtn:hover{
+    color: red;
+}
